<resources>
    <string name="app_name">Github Browser</string>
    <string name="share">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="commit_message">Commit Message</string>
    <string name="user_name">User Name</string>
    <string name="repo_name">Repo Name</string>
    <string name="description">Description</string>
    <string name="branches">Branches</string>
    <string name="issues_0">Issues(0)</string>
</resources>