<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCommitDate"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_4"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOwner2" />

                <TextView
                    android:id="@+id/tvShaInitials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:background="@color/teal_200"
                    android:gravity="center_horizontal"
                    android:text="Sha"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_4"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOwner2" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCommitMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/commit_message"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_margin="6dp"
                    app:cardCornerRadius="21dp">

                    <ImageView
                        android:id="@+id/ivUserImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="User Image"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:text="@string/user_name"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/font_size_4" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>